# python-intermediate-inflammation

./: .gitignore  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: compute_data.py  models.py
tests/: test_compute_data.py  test_models.py
